<resources>
    <string name="app_name" translatable="false">Finance Track</string>
    <string name="home_title" translatable="false">FinanceTrack</string>
    <string name="create_expense_title">Create Expense</string>
    <string name="create">Create</string>
    <string name="update_expense_title">Update Expense</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="category_delete_title">Warning</string>
    <string name="category_delete_message">By deleting this category all of its expenses will also be deleted. Are you sure you want to delete this category?</string>
    <string name="my_categories">My Categories</string>
    <string name="my_expenses">My Expenses</string>
    <string name="financetrack">FinanceTrack</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="amount">Amount:</string>
    <string name="due_date">Due Date:</string>
    <string name="my_chart">My Chart</string>
    <string name="create_category">Create Category</string>
    <string name="category_name_e_g_home">Category Name: e.g. Home</string>
    <string name="create_expense">Create Expense</string>
    <string name="choose_a_category">Choose a category:</string>
    <string name="expense_name_e_g_rent">Expense Name: e.g. Rent.</string>
    <string name="amount1">Amount</string>
    <string name="date">Date</string>
    <string name="control_your_expenses_more_easily">Control your expenses more easily</string>
    <string name="keep_track_of_your_expenses">Keep track of your expenses</string>
    <string name="infographs_for_a_better_view_of_your_financial_life">Infographs for a better view of your financial life!</string>
    <string name="simple_quick_and_easy">simple, quick and easy</string>
    <string name="upcoming_expenses">Upcoming expenses</string>
    <string name="total_monthly_expenses">Total monthly expenses</string>
    <string name="chart">Chart</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="add_expense">ADD EXPENSE</string>
</resources>