<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rect_shape"
    android:backgroundTint="#D7E1F9"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_category"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:fontFamily="@font/pacifico"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:background="@drawable/add_shape_list"
        android:layout_height="wrap_content"
       android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/add_shape_list"
            android:id="@+id/et_category_name"
            android:layout_width="match_parent"
            android:hint="@string/category_name_e_g_home"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="textCapCharacters"
            android:maxLength="12"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:backgroundTint="#2F2F2F"
        android:layout_marginBottom="15dp"
        android:id="@+id/btn_category_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>