<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/vazio_home"
        android:layout_width="333dp"
        android:visibility="gone"
        android:layout_height="343dp"
        android:src="@drawable/vazio_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_grafic"
        android:layout_width="62dp"
        android:layout_height="106dp"
        android:background="@drawable/rect"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.229" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/baseline_bar_chart_24"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/btn_grafic"
        app:layout_constraintEnd_toEndOf="@+id/btn_grafic"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="@+id/btn_grafic"
        app:layout_constraintTop_toTopOf="@+id/btn_grafic"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart"
        android:textColor="@color/blue"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_grafic"
        app:layout_constraintEnd_toEndOf="@+id/btn_grafic"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="@+id/btn_grafic"
        app:layout_constraintTop_toTopOf="@+id/btn_grafic"
        app:layout_constraintVertical_bias="0.777" />


    <TextView
        android:id="@+id/set_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_expenses"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.073" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="10dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="210dp"
        android:layout_height="106dp"
        android:backgroundTint="#E9E9E9"
        android:padding="4dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/set_name_text"
        app:layout_constraintTop_toBottomOf="@+id/set_name_text"
        app:layout_constraintVertical_bias="0.056">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/total_monthly_expenses"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valor_despesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:text="0,00"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>