<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.MainFragment">


    <ImageView

        android:id="@+id/ctn_content"
        android:layout_width="353dp"
        android:layout_height="314dp"
        android:background="@drawable/vazio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <TextView
        android:id="@+id/set_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rv_categories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/textadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/my_categories"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_categories"
        app:layout_constraintEnd_toEndOf="@+id/set_name_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rv_categories"
        app:layout_constraintTop_toBottomOf="@+id/set_name_text"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        android:text="@string/my_expenses"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/rv_expenses"
        app:layout_constraintEnd_toEndOf="@+id/rv_categories"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="@+id/rv_categories"
        app:layout_constraintTop_toBottomOf="@+id/rv_categories"
        app:layout_constraintVertical_bias="0.666" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/background_category"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_category" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_expenses"
        android:layout_width="311dp"
        android:layout_height="468dp"
        android:layout_marginTop="40dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_categories"
        app:layout_constraintVertical_bias="0.089"
        tools:listitem="@layout/card_recycler_list" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_add_expense"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rect"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/rv_expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/rv_categories"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="+"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_expense"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_expense"
        app:layout_constraintStart_toStartOf="@+id/btn_add_expense"
        app:layout_constraintTop_toTopOf="@+id/btn_add_expense"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_expense"
        android:textColor="@color/blue"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_expense"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_expense"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="@+id/btn_add_expense"
        app:layout_constraintTop_toTopOf="@+id/btn_add_expense"
        app:layout_constraintVertical_bias="0.761" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_add_categorie"
        android:layout_width="75dp"
        android:layout_height="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/rect"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/rv_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toEndOf="@+id/textadd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="+"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_categorie"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_categorie"
        app:layout_constraintStart_toStartOf="@+id/btn_add_categorie"
        app:layout_constraintTop_toTopOf="@+id/btn_add_categorie"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_category"
        android:textColor="@color/blue"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btn_add_categorie"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_categorie"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="@+id/btn_add_categorie"
        app:layout_constraintTop_toTopOf="@+id/btn_add_categorie"
        app:layout_constraintVertical_bias="0.80" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="369dp"
        android:layout_height="356dp"
        android:src="@drawable/imglist"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />


</androidx.constraintlayout.widget.ConstraintLayout>